--- a/package.json
+++ b/package.json
@@ -42,7 +42,16 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "slugify": "^1.6.1",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
