--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/database/ormConfig.ts",
-    "typeorm-prod": "./node_modules/typeorm/cli.js --config dist/database/ormConfig.js",
+    "typeorm-prod": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config dist/database/ormConfig.js",
     "db:drop": "yarn typeorm schema:drop",
     "db:create": "yarn typeorm migration:generate -- -n",
     "db:create-prod": "yarn typeorm-prod migration:generate -- -n",
